Applet: possibility to cleanup transient applets

Even if an applet is marked as transient (for instance if somebody
called setDestroyed, or if its parent is already transient. like
in the bug report) it should be possible to destroy it as well, so
if the corona is mutable, call cleanupoanddelete anyways (applet and
containment immutability will always be systemimmutable when they are
transient)

BUG:498175